fixing styling for high contrast accessibility

--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -286,12 +286,20 @@ li a:focus {
 
 /* High Contrast */
 @media (prefers-contrast: more) {
-    .nav-container,
-    .desktop-nav,
     .mobile-header,
     .mobile-nav {
         background-color: #fff;
-        border-bottom: solid 2px #000;
+        border: solid 2px #000;
+    }
+
+    .desktop-nav {
+        height: 99%;
+        background-color: #fff;
+    }
+
+    .nav-container {
+        background-color: #fff;
+        border: solid 2px #000;
     }
 
     .logo-container a,
@@ -313,18 +321,37 @@ li a:focus {
             text-decoration: underline!important;
         }
 
-        a.links {
+        a.link {
+            transform: none !important;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .nav-container,
+        .desktop-nav {
+            border: 0;
+        }
+
+        .name {
             transform: none !important;
         }
     }
 
     @media (prefers-color-scheme: dark) {
-        .nav-container,
-        .desktop-nav,
         .mobile-header,
         .mobile-nav {
             background-color: #000;
-            border-bottom: solid 2px #fff;
+            border: solid 2px #fff;
+        }
+
+        .desktop-nav {
+            height: 99%;
+            background-color: #000;
+        }
+
+        .nav-container {
+            background-color: #000;
+            border: solid 2px #fff;
         }
 
         .logo-container a,
@@ -346,7 +373,18 @@ li a:focus {
                 text-decoration: underline!important;
             }
 
-            a.links {
+            a.link {
+                transform: none !important;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .nav-container,
+            .desktop-nav {
+                border: 0;
+            }
+
+            .name {
                 transform: none !important;
             }
         }
